[package]
name = "lxr"
version = "0.0.1"
authors = ["Alexander <alexander.bifulco@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.6.0"
glfw = "0.29.0"
rand = "0.6.5"
specs = "0.14.3"
smallvec = "0.6.10"
lazy_static = "1.3.0"
libc = "0.2.58"
cgmath = "0.17.0"
image = "0.21.2"
bitflags = "1.1.0"